--- a/sass/components/main-page/_team-cards.scss
+++ b/sass/components/main-page/_team-cards.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  gap: 30px;
 
   @media screen and (min-width: 1200px) {
     justify-content: space-between;
@@ -13,6 +14,15 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  flex-basis: calc((100% - 0px) / 1);
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc((100% - 30px) / 2);
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc((100% - 90px) / 4);
+  }
 
   &__description {
     padding: 30px 32px;
